k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: pasal-ingress
  namespace: pasal

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx

  rules:
    - host: pasal.local

      http:
        paths:

          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific

            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend
                port:
                  number: 80
